syntax = "proto3";

package pos_protobuf;

import "pos/include/proto/handle.proto";

/*!
 *  \brief  binary format of POSHandle_CUDA_Event
 */
 message Bin_POSHandle_CUDA_Event {
    Bin_POSHandle base = 1;
    int32 flags = 2;
}
